--- a/js/intersection_observer/style.css
+++ b/js/intersection_observer/style.css
@@ -66,5 +66,7 @@ section h2{
 .bubble{
     position: absolute;
     z-index: -2;
-    background:linear-gradient(to right top,#348F50,#56B4D3)
+    background:linear-gradient(to right top,#348F50,#56B4D3);
+    transform: scale(2);
+    transition: all .5s ease;
 }
